# thermospheric-density-reduced-order-modeling

./: .gitignore  Density_nn.py  LICENSE  Makefile  POD.py  POD_jupyter.ipynb  README.md  SDC_Lorenz.py  modred_test.py  pyproject.toml  requirements.txt  scikit_kpod.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
Data/: 2011_HASDM_500-575KM.txt  2012_HASDM_500-575KM.txt  2013_HASDM_500-575KM.txt  2014_HASDM_500-575KM.txt  2015_HASDM_500-575KM.txt  2016_HASDM_500-575KM.txt  2017_HASDM_500-575KM.txt  2018_HASDM_500-575KM.txt  2019_HASDM_500-575KM.txt
paper/: paper.bib  paper.md
paper/template/: Eisvogel.latex
requirements/: dev.in  dev.txt
src/: Density_nn.py  POD.py  POD_jupyter.ipynb  SDC_Lorenz.py  density_field.ipynb  density_hd.py  density_nn_new.py  pod.py
